# ColorConfig

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/: oceanic-eyes.solongo.toml
src/: alacritty.rs  cli.rs  color_config.rs  filename.rs  lib.rs  main.rs  registry.rs  solongo.rs  vscode_integrated_terminal.rs  windows_terminal.rs
src/formats/: alacritty.rs  mod.rs  target.rs  vscode_integrated_terminal.rs  windows_terminal.rs
