[package]
name = "colorconfig"
version = "0.1.0"
authors = [
    "Yi Hyunjoon <yi.hyunjoon@gmail.com>",
    "Jeong YunWon <jeong@youknowone.org>"
]
edition = "2018"
license = "MIT"
description = "Terminal colorscheme generator"
readme = "README.md"
homepage = "https://colorconfig.org"
repository = "https://github.com/ColorConfig/ColorConfig"
keywords = ["cli", "terminal", "color"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "1.4"
structopt = "0.3"
anyhow = "1.0"
